# otus-cpp-01-hello-world

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: CMakeLists.txt  lib.cxx  main.cxx
